# pixel_art_master

./: .gitignore  LICENSE  TEMP.md  index.html  package-lock.json  package.json  vite.config.ts
.VSCodeCounter/2026-07-07_15-48-49/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/color_edit/: cancel.rs  disable.rs  manual.rs  merge.rs  mod.rs  oklab.rs  pipeline.rs  rgb_prefilter.rs  stats.rs  timing.rs  types.rs
src/application/ports/: IAgentProfileRepository.ts  IAppSettingsRepository.ts  IAssetLibraryRepository.ts  ICaptureService.ts  IClipboardService.ts  IColorEditPreferencesRepository.ts  IColorEditProcessor.ts  IColorVariationAnalysisPreferencesRepository.ts  IComfyAppRepository.ts  IComfyUiClient.ts  IComfyUiSettingsRepository.ts  IEditorPreferencesRepository.ts  IFieldPromptConfigRepository.ts  IImageExportPreferencesRepository.ts  IImageProcessor.ts  ILastOpenedProjectStore.ts  ILlmClient.ts  ILlmSettingsRepository.ts  ILuminancePalettePresetRepository.ts  IPalettePresetRepository.ts  IPatternBrushRepository.ts  IPixelRestorePreferencesRepository.ts  IProjectRepository.ts  IProjectsWorkspaceStore.ts  IPromptPresetRepository.ts  IRecentProjectsStore.ts  ISoftwareDataPathStore.ts  IWindowPreferencesStore.ts  IWorldAgentSettingsRepository.ts  IWorldRepository.ts  IWorldsWorkspaceStore.ts
temp/: game-art-prompt-dictionary.md
(+772 files in other folders)
