[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-screenshots = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-persisted-scope = "2"
tauri-plugin-clipboard-manager = "2"
base64 = "0.22"

# Windows 上需要直接访问 WebView2 控制器，拦截单独的 Alt 键以避免画布失焦。
# 版本与 Tauri 内部使用的 webview2-com 保持一致，确保 ICoreWebView2Controller 类型兼容。
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

